[package]
name = "lock-it"
version = "1.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
hex = "0.4.3"
rand = "0.8.5"
rpassword = "7.3.1"
rust-argon2 = "2.1.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
# overflow-checks = false
debug = false