[package]
name = "locked-in"
version = "1.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.8.5"
rpassword = "7.3.1"
rust-argon2 = "2.1.0"
serde = {version = "1.0.217", features = ["derive"]}
zeroize = "1.8.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
# overflow-checks = false
debug = false
